--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-typescript": "^7.16.0",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
+    "dtsgenerator": "^3.13.2",
     "html-webpack-plugin": "^5.5.0",
     "typescript": "^4.5.2",
     "webpack": "^5.65.0",
